# icinga-core

./: AUTHORS  COPYING  ChangeLog  Changelog  Doxyfile  INSTALL  Makefile.am  Makefile.in  THANKS  aclocal.m4  configure  configure.in  depcomp  icinga.spec  libtool  ltmain.sh  rc.ido2db.in  update-version  update-version-schema
base/: Makefile.am  Makefile.in  broker.c  checks.c  commands.c  config.c  events.c  flapping.c  helpers.c  icinga.c  icingastats.c  logging.c  nebmods.c  netutils.c  notifications.c  profiler.c  sehandlers.c  sretention.c  statsprofiler.c  utils.c
cgi/: Makefile.am  Makefile.in  avail.c  cgiauth.c  cgiutils.c  cmd.c  config.c  extinfo.c  getcgi.c  histogram.c  history.c  notifications.c  outages.c  showlog.c  status.c  statusmap.c  statuswml.c  statuswrl.c  summary.c  tac.c  trends.c
common/: Makefile.am  Makefile.in  comments.c  downtime.c  macros.c  objects.c  shared.c  skiplist.c  statusdata.c
html/: Makefile.in  main.html
html/docs/de/: about.html  activechecks.html  adaptive.html  addons.html  beginners.html  cachedchecks.html  cgiauth.html  cgicmd.html  cgiincludes.html  cgiparams.html  cgis.html  cgisecurity.html  ch03.html  ch06.html  ch10.html  ch12.html  checkscheduling.html  clusters.html  components.html  config.html  configcgi.html  configido.html  configmain.html  configobject.html  customobjectvars.html  db_changes.html  db_intro.html  db_model.html  dependencies.html  dependencychecks.html  distributed.html  downtime.html  embeddedperl.html  epnplugins.html  escalation_condition.html  escalations.html  eventhandlers.html  example-configs.html  extcommands.html  extcommands2.html  (+63 more)
html/docs/en/: about.html  activechecks.html  adaptive.html  addons.html  beginners.html  cachedchecks.html  cgiauth.html  cgicmd.html  cgiincludes.html  cgiparams.html  cgis.html  cgisecurity.html  ch03.html  ch06.html  ch10.html  ch12.html  checkscheduling.html  clusters.html  config.html  configcgi.html  configido.html  configmain.html  configobject.html  customobjectvars.html  db_changes.html  db_components.html  db_example-configs.html  db_intro.html  db_model.html  dependencies.html  dependencychecks.html  distributed.html  downtime.html  embeddedperl.html  epnplugins.html  escalation_condition.html  escalations.html  eventhandlers.html  extcommands2.html  faststartup.html  (+62 more)
html/doxygen/html/: annotated.html  avail_8c.html  base_2config_8c.html  base_2notifications_8c.html  base_2perlxsi_8c.html  base_2utils_8c.html  broker_8c.html  broker_8h-source.html  broker_8h.html  cgi_2config_8c.html  cgi_2notifications_8c.html  cgiauth_8c.html  cgiauth_8h-source.html  cgiauth_8h.html  cgiutils_8c.html  cgiutils_8h-source.html  cgiutils_8h.html  checks_8c.html  classes.html  cmd_8c.html  commands_8c.html  comments_8c.html  comments_8h-source.html  comments_8h.html  config_8h-source.html  config_8h.html  contrib_2epn__icinga_8h-source.html  contrib_2epn__icinga_8h.html  contrib_2perlxsi_8c.html  convertcfg_8c.html  daemonchk_8c.html  db_8c.html  db_8h-source.html  db_8h.html  dbhandlers_8c.html  dbhandlers_8h-source.html  dbhandlers_8h.html  dbqueries_8c.html  dbqueries_8h-source.html  dbqueries_8h.html  (+407 more)
html/js/: checkboxesNbutton.js  showValue.js
include/: Makefile  broker.h  cgiauth.h  cgiutils.h  comments.h  common.h  config.h.in  downtime.h  getcgi.h  icinga.h  macros.h  nebcallbacks.h  nebmods.h  nebmodules.h  nebstructs.h  objects.h  perfdata.h  profiler.h  shared.h  sretention.h  statsprofiler.h  statusdata.h  stdheaders.h
m4/: libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
module/idoutils/db/mysql/: mysql-upgrade-1.2.2.sql  mysql-upgrade-1.3.1.sql  mysql.sql
module/idoutils/db/mysql/upgrade/: mysql-upgrade-1.6.0.sql
module/idoutils/db/oracle/: oracle-upgrade-1.2.2.sql  oracle-upgrade-1.3.1.sql  oracle.sql
module/idoutils/db/oracle/upgrade/: oracle-upgrade-1.6.0.sql
module/idoutils/db/pgsql/: pgsql-upgrade-1.3.1.sql  pgsql.sql
module/idoutils/db/pgsql/upgrade/: pgsql-upgrade-1.6.0.sql
module/idoutils/db/scripts/: installdb.in  upgradedb.in
module/idoutils/include/: common.h  db.h  ido2db.h  idomod.h  queue.h  sla.h
module/idoutils/src/: .gitignore  Makefile.in  db.c  dbhandlers.c  dbqueries.c  file2sock.c  ido2db.c  idomod.c  log2ido.c  logging.c  queue.c  sla.c  sockdebug.c
sample-config/: icinga.cfg.in
t/: Makefile.am  Makefile.in
t-tap/: Makefile.in  test_checks.c
t/etc/standalone/: minimal.cfg  simple.cfg
t/standalone/: minimal.cfg  simple.cfg
t/unit/: Makefile.am  Makefile.in  parse_config.c  run_command  run_command.c
t/usr/local/icinga/libexec/: check_me
t/usr/local/icinga/notifications/: notify-none
t/usr/local/icinga/var/: objects.cache
t/usr/local/icinga/var/spool/checkresults/: cMnzb0u  cnzd0C4
t/var/: objects.cache
xdata/: Makefile.am  Makefile.in  xcddefault.c  xdddefault.c  xodtemplate.c  xodtemplate.h  xpddefault.c  xrddefault.c  xsddefault.c
